# devops-env-check

./: .env.example  .gitignore  Dockerfile  README.md  _pyproject.toml  app.py  environment.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py  training.py
agent/: inference.py
env/: client.py  environment.py  graders.py  models.py  tasks.py
server/: app.py
