[project]
name = "devops-incident-response"
version = "1.0.0"
description = "DevOps Incident Response Environment with AI agent"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Jayanth" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "pydantic",
    "python-dotenv",
    "requests",
    "openenv-core",
    "streamlit>=1.30.0,<2.0.0",
    "stable-baselines3",
    "gymnasium",
    "shimmy",
    "matplotlib"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "agent*", "server*"]
